# TaifishingV4

./: .bandit  .cursorrules  .gitignore  .last_build_hash  .pre-commit-config.yaml  .uvignore  CELERY_INTEGRATION.md  Dockerfile  LICENSE  LOG_IMPROVEMENTS_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  TEST_REPORT.md  app.py  bandit-report.json  bandit_report.txt  bandit_report_updated.txt  black-report.txt  celery_monitor.py  celerybeat-schedule-shm  celerybeat-schedule-wal  check_celery.sh  cookies.txt  create_oracle_sqlserver_test_data.py  debug_batches_page.py  debug_timezone.py  deploy.sh  dev_uv.sh  dev_workflow.sh  docker-compose-oracle-sqlserver.yml  docker-compose-test.yml  docker-compose.integrated.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  env.example  env.production  fix-login-redirect.sh  (+70 more)
app/: __init__.py  celery_config.py  celery_manager.py  config.py  constants.py  scheduler.py  tasks.py
appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
config/: database_filters.yaml
doc/: AUDIT_REPORT.md  CONFIG_MANAGEMENT_FEATURES.md  FUNCTION_INTEGRATION_REPORT.md  LOG_MANAGEMENT_FEATURES.md  ORACLE_ARM64_ERROR_HANDLING_REPORT.md  ORACLE_ARM64_SUPPORT_REPORT.md  PERFORMANCE_MONITOR_REMOVAL_REPORT.md  PROJECT_STRUCTURE.md  README.md  SECOND_AUDIT_REPORT.md  index_temp.css  report.md  spec.md  todolist.md
docker/: Dockerfile  Dockerfile.x86_64  README.md
docs/: DATABASE_PERMISSIONS_OVERVIEW.md  README.md  database_initialization.md  需求.md
examples/: demo_unified_logs_button.py  loguru_usage_example.py  structlog_console_demo.py  test_migrated_logging.py  test_unified_logging.py
reports/: auto_fix_report.json  bandit-report_20250913_095348.json  bandit-report_20250913_100031.json  bandit-report_20250913_100054.json  bandit-report_20250913_100127.json  bandit-report_20250913_100415.json  bandit-report_20250913_100455.json  bandit-report_20250913_142710.json  bandit-report_20250913_143340.json  bandit-report_20250913_193919.json  bandit-report_20250913_193946.json  bandit-report_20250913_201014.json  bandit-report_20250913_222354.json  bandit-report_20250913_222410.json  bandit-report_20250914_105756.json  bandit-report_20250914_110441.json  bandit-report_20250914_184920.json  bandit-report_20250914_184935.json  bandit-report_20250914_203926.json  bandit-report_20250914_204152.json  bandit-report_20250914_210013.json  bandit-report_20250914_231404.json  bandit-report_20250914_231459.json  black-report_20250913_095348.txt  black-report_20250913_100031.txt  black-report_20250913_142710.txt  black-report_20250914_184920.txt  black-report_20250914_184935.txt  black-report_20250914_203926.txt  black-report_20250914_204152.txt  black-report_20250914_210013.txt  black-report_20250914_231404.txt  isort-report_20250913_095348.txt  isort-report_20250913_100031.txt  isort-report_20250913_142710.txt  isort-report_20250913_143340.txt  isort-report_20250913_193919.txt  isort-report_20250913_193946.txt  isort-report_20250913_201014.txt  isort-report_20250913_222354.txt  (+47 more)
scripts/: add_indexes.py  add_performance_indexes.py  auto_fix_issues.py  automated_deployment.py  create_admin_user.py  create_sqlserver_oracle_test_data.py  (+40 more)
(+330 files in other folders)
