[project]
name = "taifishingv4"
version = "0.1.0"
description = "泰摸鱼吧 - 数据库账户管理系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # 核心框架
    "Flask==3.0.3",
    "Jinja2==3.1.4",
    "Werkzeug==3.0.3",
    # 数据库
    "Flask-SQLAlchemy==3.0.5",
    "Flask-Migrate==4.0.7",
    "psycopg[binary]>=3.0.0,<4.0.0", # 使用psycopg3，对Python 3.13支持更好
    "SQLAlchemy==1.4.54",
    "alembic==1.16.5",
    # 数据库驱动
    "PyMySQL==1.1.1",
    "pymssql>=2.2.0,<3.0.0",
    "pyodbc>=5.0.0,<6.0.0",
    "oracledb==3.3.0",
    # 缓存
    "redis==5.0.7",
    "Flask-Caching==2.1.0",
    "cachelib==0.9.0",
    # 异步任务
    "Celery==5.5.3",
    "kombu==5.5.4",
    "billiard==4.2.1",
    "vine==5.1.0",
    # 认证和安全
    "Flask-JWT-Extended==4.6.0",
    "Flask-Bcrypt==1.0.1",
    "Flask-Login==0.6.3",
    "PyJWT==2.10.1",
    "bcrypt==4.3.0",
    "cryptography==45.0.7",
    # 表单处理
    "Flask-WTF==1.2.1",
    "WTForms==3.1.2",
    # 权限管理
    "Flask-Principal==0.4.0",
    # 管理界面
    "Flask-Admin==1.6.1",
    # API相关
    "Flask-RESTful==0.3.10",
    "Flask-CORS==4.0.0",
    # 配置管理
    "python-dotenv==1.0.1",
    # 测试
    "pytest==8.2.2",
    "pytest-flask==1.3.0",
    # 开发工具
    "gunicorn==22.0.0",
    # 其他工具
    "requests==2.32.3",
    "python-dateutil==2.9.0",
    "pytz==2025.2",
    "tzdata==2025.2",
    "beautifulsoup4==4.13.5",
    "soupsieve==2.8",
    "psutil==7.0.0",
    # 系统工具
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "prompt_toolkit==3.0.52",
    "wcwidth==0.2.13",
    # 网络和安全
    "urllib3==2.5.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    # 模板和序列化
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "itsdangerous==2.2.0",
    "aniso8601==10.0.1",
    # 工具库
    "six==1.17.0",
    "packaging==25.0",
    "typing_extensions==4.15.0",
    "pycparser==2.22",
    "cffi==1.17.1",
    "blinker==1.9.0",
    "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-flask==1.3.0",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==8.2.2",
    "pytest-flask==1.3.0",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
